# http-server

./: Cargo.toml  readme.md
backend/: Cargo.toml
backend/src/: datastore.rs  lib.rs
backend/src/routes/: cdn.rs  files.rs  landing.rs  upload.rs
backend/src/www/: index.html  login.html
backend/src/www/css/: app.css
backend/src/www/js/: login.js  navagation.js  show_file.js  table_builder.js  upload.js
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: auth.rs  datastore.rs  lib.rs
src/routes/: cdn.rs  files.rs  landing.rs  login.rs  mod.rs  upload.rs
src/www/: index.html  login.html  skeleton.css  upload.html
src/www/js/: app.js  table_builder.js  upload.js
src/www2/: index.html  login.html
src/www2/css/: app.css
src/www2/js/: app.js  show_file.js  table_builder.js  upload.js
