[package]
name = "httpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = "4.9.0"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
future-utils = "0.12.1"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
