[package]
name = "httpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
rustls = "0.23"
rustls-pemfile = "2"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
future-utils = "0.12.1"
futures = "0.3.30"
futures-util = "0.3.30"
nanoid = "0.4.0"
openssl = "0.10.66"
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
walkdir = "2.5.0"
chrono = "0.4.38"
